# video-player

./: .gitignore  COMMANDS.txt  TODO  TODO.txt  app.json  global.css  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/: _layout.tsx  hidden-media.tsx  index.tsx  player-settings.tsx  player.tsx  search.tsx  test-gesture.tsx  theme-editor.tsx
components/: AlbumItem.tsx  AlbumItemDetailsModal.tsx  AlbumItemRecentlyPlayed.tsx  AlbumVideos.tsx  AppModal.tsx  BaseMenu.tsx  BrightnessCorner.tsx  Button.tsx  ClipExportModal.tsx  ClippingOverlay.tsx  ColorPicker.tsx  ConfirmationModal.tsx  CorePlayer.tsx  EmptyAlbumState.tsx  FloatingPlayer.tsx  Header.tsx  Icon.tsx  LoadingStatus.tsx  Menu.tsx  PlayerCentralIndicator.tsx  PlayerControls.tsx  PlayerCorner.tsx  PlayerGestureDetector.tsx  PlayerHeader.tsx  PlayerOrientationButton.tsx  PrefixFilterMenu.tsx  RenameModal.tsx  SearchModal.tsx  SelectDropdown.tsx  SelectionOverlay.tsx  SettingsScreen.tsx  Skeleton.tsx  SortMenu.tsx  SuccessBadge.tsx  Themed.tsx  ThemedBottomSheet.tsx  ThemedKeyboardAvoidingView.tsx  VideoBadges.tsx  VideoItem.tsx  VideoItemDetailsModal.tsx  (+2 more)
constants/: defaults.ts  theme.json
context/: FloatingPlayerContext.tsx  PlaybackContext.tsx  SettingsContext.tsx  ThemeContext.tsx
hooks/: useClipping.ts  useLogs.ts  useMedia.tsx  useMediaDelete.tsx  useMediaHide.tsx  useMediaLoadingTask.ts  useMediaPermission.tsx  useMediaPrefixFilter.tsx  (+8 more)
modules/expo-ffmpeg/android/: CMakeLists.txt  build.gradle
modules/expo-ffmpeg/android/src/main/java/expo/modules/ffmpeg/: ExpoFFmpegModule.kt
(+33 files in other folders)
